ARM64エミュレーション用にJavaFXの依存関係を変更